--- a/recursos/css/estilos.css
+++ b/recursos/css/estilos.css
@@ -597,3 +597,19 @@ iframe {
     color: black;
     /* font-weight: bold; */
 }
+
+.contenedor-footer{
+    background-color: chocolate;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.contenedor-footer a{
+    padding: 1%;
+    font-size: 25px;
+    text-decoration-line: underline;
+}
